# will-encrypt

./: .gitignore  AGENTS.md  CLAUDE.md  EXAMPLE_IMPORT_SHARES.md  IMPLEMENTATION_SUMMARY.md  README.md  REVIEW.md  SECURITY_REVIEW.md  SHARES_GUIDE.docx  SHARES_GUIDE.md  UPDATE.md  demo1_output.txt  demo_final.sh  fix_remaining_tests.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.yaml  test_editor_alignment.py  will-encrypt
.github/: dependabot.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-1-purpose-scope/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-1-purpose-scope/contracts/: decrypt.schema.yaml  encrypt.schema.yaml  init.schema.yaml  list.schema.yaml  rotate.schema.yaml  validate.schema.yaml
src/: bootstrap.py  main.py
src/cli/: decrypt.py  delete.py  edit.py  editor.py  encrypt.py  init.py  interactive.py  list.py  rotate.py  share_table.py  validate.py
src/crypto/: bip39.py  encryption.py  keypair.py  passphrase.py  shamir.py
src/docs/: crypto_notes.py  policy.py  recovery_guide.py
src/storage/: manifest.py  models.py  vault.py
tests/: test_helpers.py
tests/artifacts/: generate_artifact.py
tests/artifacts/current_vault/: current_vault.yaml  shares.json
tests/artifacts/v1.0_initial/: metadata.json  shares.json  vault.yaml
tests/artifacts/v1.0_multi_message/: metadata.json  shares.json  vault.yaml
tests/contract/: test_decrypt_contract.py  test_delete_contract.py  test_edit_contract.py  test_encrypt_contract.py  test_init_contract.py  test_list_contract.py  test_rotate_contract.py  test_validate_contract.py
tests/integration/: test_backward_compat.py  test_current_vault_decrypt.py  test_emergency_recovery.py  test_full_lifecycle.py  test_message_management.py  test_share_import_matching.py  test_share_rotation.py  test_validation_audit.py
tests/unit/: test_bip39.py  test_bootstrap.py  test_cli_branch_coverage.py  test_dependency_age_check.py  test_editor.py  test_encryption.py  test_interactive.py  test_keypair.py  test_main_entry.py  test_manifest.py  test_passphrase.py  test_shamir.py  test_share_index_preservation.py  test_vault.py
tools/: check_dependency_age.py
