[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "will-encrypt"
version = "1.0.0"
description = "Threshold cryptography system for emergency access to sensitive information"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Will Encrypt Project"}
]
keywords = ["cryptography", "threshold", "shamir", "emergency-access", "post-quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "PyYAML==6.0.3",
    "cffi==2.0.0",
    "cryptography==48.0.0",
    "mnemonic==0.21",
    "pqcrypto==0.4.0",
    "pycparser==3.0",
]

[project.optional-dependencies]
dev = [
    "ast-serialize==0.3.0",
    "boolean.py==5.0",
    "CacheControl==0.14.4",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "cyclonedx-python-lib==11.7.0",
    "coverage==7.13.5",
    "defusedxml==0.7.1",
    "execnet==2.1.2",
    "filelock==3.25.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "license-expression==30.4.4",
    "librt==0.10.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "msgpack==1.1.2",
    "mypy==2.0.0",
    "mypy_extensions==1.1.0",
    "packageurl-python==0.17.6",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pip==26.1.1",
    "pip-api==0.0.34",
    "pip-audit==2.10.0",
    "pip-requirements-parser==32.0.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "py-serializable==2.1.0",
    "Pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "requests==2.33.0",
    "rich==14.3.3",
    "ruff==0.15.12",
    "sortedcontainers==2.4.0",
    "tomli==2.4.1",
    "tomli_w==1.2.0",
    "types-PyYAML==6.0.12.20260508",
    "typing_extensions==4.15.0",
    "urllib3==2.7.0",
]

[project.scripts]
will-encrypt = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n auto --dist loadscope -v --cov=src --cov-report=html --cov-report=term"
